17/09/22 (Nuevas imágenes en la animación del background)

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
 </head>
 <body>
 	<div class="background">
-		<img id="backgroundImgTres" class="background-images" src="Resources\Images\80d012be-a016-4e78-8d4f-579dd3ba9bb0.jfif">
-		<img id="backgroundImgDos" class="background-images" src="Resources\Images\ff6cdd09-e845-4ed2-aacd-887a748685f6.jfif">
-		<img id="backgroundImgUno" class="background-images" src="Resources\Images\7f7f3356-7605-461d-9ee1-9868341e6809.jfif">
+		<img id="backgroundImgCinco" class="background-images" src="Resources\Images\backgroundCinco.jpg">
+		<img id="backgroundImgCuatro" class="background-images" src="Resources\Images\backgroundCuatro.jpg">
+		<img id="backgroundImgTres" class="background-images" src="Resources\Images\backgroundTres.jpg">
+		<img id="backgroundImgDos" class="background-images" src="Resources\Images\backgroundDos.jpg">
+		<img id="backgroundImgUno" class="background-images" src="Resources\Images\backgroundUno.jpg">
 		<div class="background-mascara"></div>
 		<div class="background-filtro"></div>
 	</div>
