17/09/22 (Optimización del código)

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<meta name="keywords" content="repostería, panadería, cosas dulces">
-	<meta name="description" content="Cosas dulces y algo mas.">
-	<meta name="author" content="Lucas Retamozo">
-	<meta name="robots" content="index">
+
+	<title>Delicias de Alma | Mirta Pelozo</title>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<title>Delicias de Alma | Home | Mirta Pelozo</title>
+	<meta name="description" content="Somos un emprendimiento de cosas dulces situado en Buenos Aires. Elaboramos tortas, pasteles, budínes y pan dulces, alfajorcitos de maicena, brownies, cookies y mucho más.">
+	<meta name="keywords" content="repostería, pastelería, panadería, alfajores de maicena, brownies, cookies, budínes">
+	<meta name="author" content="Lucas Retamozo">
+	<meta name="copyright" content="Lucas Retamozo">
+	<meta name="robots" content="index">
+	<meta http-equiv="cache-control" content="no-cache"/>
 
 	<link rel="icon" href="Resources\Graphics\Isologo_fondo_color-a3.svg">
 	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -23,30 +26,20 @@
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,900;1,400;1,900&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,400;0,900;1,100;1,400;1,900&display=swap" rel="stylesheet">
-
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,400;0,700;0,900;1,100;1,400;1,700;1,900&display=swap" rel="stylesheet">
-
-	<script src="https://kit.fontawesome.com/bd16a1d5bb.js" crossorigin="anonymous"></script>
 
 </head>
 <body>
-	<div class="background">
-		<img id="backgroundImgCinco" class="background-images" src="Resources\Images\backgroundCinco.jpg">
-		<img id="backgroundImgCuatro" class="background-images" src="Resources\Images\backgroundCuatro.jpg">
-		<img id="backgroundImgTres" class="background-images" src="Resources\Images\backgroundTres.jpg">
-		<img id="backgroundImgDos" class="background-images" src="Resources\Images\backgroundDos.jpg">
-		<img id="backgroundImgUno" class="background-images" src="Resources\Images\backgroundUno.jpg">
-		<div class="background-mascara"></div>
-		<div class="background-filtro"></div>
+	<div class="background-container">
+		<img id="backgroundImgE" class="background-image" src="Resources\Images\backgroundE.jpg">
+		<img id="backgroundImgD" class="background-image" src="Resources\Images\backgroundD.jpg">
+		<img id="backgroundImgC" class="background-image" src="Resources\Images\backgroundC.jpg">
+		<img id="backgroundImgB" class="background-image" src="Resources\Images\backgroundB.jpg">
+		<img id="backgroundImgA" class="background-image" src="Resources\Images\backgroundA.jpg">
+		<div class="background-filter"></div>
 	</div>
 	<header>
-		<a href="index.html" class="logo-container">
+		<a href="index.html" class="logo">
 			<div class="iso-container">
 				<img src="Resources\Graphics\Isologo_negro.svg">
 			</div>
@@ -57,27 +50,26 @@
 		<a target="_blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fapi.whatsapp.com%2Fsend%3Fphone%3D541144385812%26app%3Dfacebook%26entry_point%3Dpage_cta%26fbclid%3DIwAR3zETQUgyTu7kii4wWbcCaYSSiYfpTCckmDiG-dRcbyXOtS3Y25pzgGhVk&h=AT23kJRXrNs3AFH6gOtKU9SuWv5i3ZpXHrco934Im4jQ81Oyn-GdW7GPIgKlxLyumoBaoBadoPdoS4vE4jZQtCkLrMf_AZMxSIko8Aop6Vd9KKix2mQhByMGPrUZuCQg-NF6V1CleSTlcmc0fDJZSA"><button class="whatsapp-button" id="wsppButton">Hacé tu pedido!<i id="wspp-logo" class="fa-brands fa-whatsapp"></i></button></a>
 	</header>
 	<main>
-		<section class="section-1">
-			<div class="titulos">
-				<h1>Repostería Artesanal</h1>
-				<div class="h2">
-					<div class="divisor"></div>
-					<h2>Probá nuestras delicias elaboradas a partir de recetas caseras</h2>
-					<div class="divisor"></div>
-				</div>
-				<h3>Y disfrutá del mejor sabor con calidad y confianza</h3>
+		<div class="titles">
+			<h1>Repostería Artesanal</h1>
+			<div class="h2-container">
+				<div class="divisor"></div>
+				<h2>Probá nuestras delicias elaboradas a partir de recetas caseras</h2>
+				<div class="divisor"></div>
 			</div>
-			<p class="parrafo">Somos un emprendimiento de cosas dulces situado en Buenos Aires. Elaboramos desde tortas, pasteles, budínes y pan dulces; hasta alfajorcitos de maicena, brownnies, coockies y mucho más!</p>
-		</section>
+			<h3>Y disfrutá del mejor sabor con calidad y confianza</h3>
+		</div>
+		<p class="paragraph">Somos un emprendimiento de cosas dulces situado en Buenos Aires. Elaboramos tortas, pasteles, budínes y pan dulces, alfajorcitos de maicena, brownies, cookies y mucho más!</p>
 	</main>
 	<footer>
-		<p class="text-black">Redes sociales:</p>
-		<nav class="redes">
-			<a href="https://www.instagram.com/pelozo.mirta/?hl=es-la" target="_blank" class="redes-logo-background"><i class="fa-brands fa-instagram redes-logo"></i></a>
-			<a href="https://www.facebook.com/Las-Delicias-de-Alma-1523373591215503/" target="_blank" class="redes-logo-background"><i class="fa-brands fa-square-facebook redes-logo"></i></a>
-			<a href="mailto:mirta-pelozo@hotmail.com" target="_blank" class="redes-logo-background"><i class="fa-solid fa-at redes-logo"></i></a>
+		<p class="footer-paragraph">Redes sociales:</p>
+		<nav class="socials">
+			<a href="https://www.instagram.com/pelozo.mirta/?hl=es-la" target="_blank" class="socials-logo-background"><i class="fa-brands fa-instagram socials-logo"></i></a>
+			<a href="https://www.facebook.com/Las-Delicias-de-Alma-1523373591215503/" target="_blank" class="socials-logo-background"><i class="fa-brands fa-square-facebook socials-logo"></i></a>
+			<a href="mailto:mirta-pelozo@hotmail.com" target="_blank" class="socials-logo-background"><i class="fa-solid fa-at socials-logo"></i></a>
 		</nav>
 	</footer>
+	<script src="https://kit.fontawesome.com/bd16a1d5bb.js" crossorigin="anonymous"></script>
 	<script src="scripts.js"></script>
 </body>
 </html>
