--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				<h2>Probá nuestras delicias elaboradas a partir de recetas caseras</h2>
 				<div class="divisor"></div>
 			</div>
-			<h3>Y disfrutá del mejor sabor con calidad y confianza</h3>
+			<h3>Y disfrutá del mejor sabor con calidad y confianza...</h3>
 		</div>
 		<p class="paragraph">Somos un emprendimiento de cosas dulces situado en Buenos Aires. Elaboramos tortas, pasteles, budínes y pan dulces, alfajorcitos de maicena, brownies, cookies y mucho más!</p>
 	</main>
