06/11/22 (Optimización del código js y nueva secuencia de imágenes)

--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
 </head>
 <body>
 	<div class="background-container">
-		<img id="backgroundImgE" class="background-image" src="Resources\Images\backgroundE.jpg">
-		<img id="backgroundImgD" class="background-image" src="Resources\Images\backgroundD.jpg">
-		<img id="backgroundImgC" class="background-image" src="Resources\Images\backgroundC.jpg">
-		<img id="backgroundImgB" class="background-image" src="Resources\Images\backgroundB.jpg">
-		<img id="backgroundImgA" class="background-image" src="Resources\Images\backgroundA.jpg">
+
+		<img class="background-image" src="Resources\Images\backgroundA.jpg">
+		<img class="background-image" src="Resources\Images\backgroundB.jpg">
+		<img class="background-image" src="Resources\Images\backgroundF.jpg">
+		<img class="background-image" src="Resources\Images\backgroundD.jpg">
+		<img class="background-image" src="Resources\Images\backgroundE.jpg">
+		<img class="background-image" src="Resources\Images\backgroundG.jpg">
+		
 		<div class="background-filter"></div>
+
 	</div>
 	<header>
 		<a href="index.html" class="logo">
